# Osmos-Lite

./: .gitignore  CMakeLists.txt  EventManager.cpp  EventManager.hpp  LICENSE.md  Makefile  Observer.cpp  Observer.hpp  Parsys.cpp  Parsys.hpp  ParsysView.cpp  ParsysView.hpp  ParticleGraph.cpp  ParticleGraph.hpp  ParticleSystem.cpp  ParticleSystem.hpp  README.md  main.cpp
test/: CMakeLists.txt  test-particle-graph.cpp  test-particle-system.cpp
